Спринт 14 (#34)
* feat: add getCommonFilmsBetweenUsers() into storage, NotFriendsException

* branch name

* fix: @Autowired(required = false) userDbStorage bean (FilmDbStorage)

* fix: List + sort (вместо Set в stream), SELECT_COMMON_FILM_IDS sql (FilmDbStorage)

* fix: checkstyle

* fix: tests (List -> Set)

* fix: FilmDbStorageTest (bean userDbStorage)

* безопасные вставки (data.sql)

* также добавлено info о жанрах (genres)

* test commit

* refactoring, without change data/schema

* refactor: общий метод prepareFilmsWithGenresAndMpa(***) - FilmServiceImpl, правильные data/schema

* Refactor: Добавление метода преобразования Film -> FilmResponseDto и его внедрение

* Удаление фильмов и пользователей по id 

* Remove user and film by id

* Добавлено сохранения порядка по id mpa и genre

* Убраны лишние импорты

* Добавлена возможность получить пользователя по id для прохождения автотеста

* Убраны лишние импорты

* Убраны лишние импорты

* Убраны лишние импорты

* Замена в тестах Set на List

* Убраны лишние импорты

* Расписаны импорты, убраны лишние переменные в PathVariable, получение фильма по id реализовано через класс Optional

* Изменен метод deleteById в UserDbStorage: проверка на существование пользователя теперь происходит в UserServiceImpl

* Изменен метод deleteById в UserDbStorage: проверка на существование пользователя теперь происходит в UserServiceImpl

* Исправлена ошибка конфликта слияния

* убран импорт

* Исправлены неточности

* Исправлены неточности №2

* Рефакторинг кода

---------

Co-authored-by: Сергей Овчинников <demix2703204@gmail.com>
Co-authored-by: Nikita Yakimenko <nikisan213@mail.ru>

* Добавление режиссёров в фильмы 

* Реализация эндпоинтов удаления, обновления, поиска по id, получения всех значений и добавления для Режиссеров; Начало работы над поиском фильмов по режиссеру с сортировкой

* Решение проблем с тестами

* Реализация бизнес логики в сервисах

* Завершение работы над функционалом

* Решение проблем с тестами

* Пере